--- a/index.html
+++ b/index.html
@@ -1312,7 +1312,7 @@
                     </div>
                     <div class="stat-box">
                         <h4>📍 Location</h4>
-                        <p>Arnia Nager, Madurai</p>
+                        <p>Anna Nager, Madurai</p>
                     </div>
                     <div class="stat-box">
                         <h4>💼 Role</h4>
@@ -1775,3 +1775,4 @@
     </script>
 </body>
 </html>
+
